--- a/download.html
+++ b/download.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Key Protected Download</title>
     <style>
+        // This was made by crashout
         body {
             background: linear-gradient(135deg, #282c34, #61dafb);
             font-family: 'Arial', sans-serif;
